--- a/frontend/src/components/Listings/Listings.css
+++ b/frontend/src/components/Listings/Listings.css
@@ -1,37 +1,24 @@
-.card {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    border: 5px solid #e3e3e3;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    width: 25vw;
-    height: 30vh;
-    font-family: sans-serif;
+.swiper-wrapper {
+    height: 200px;
+    width: 1000px;
+    margin-left: 10%;
+    margin-top: 10%;
+    margin-right: 10%;
 }
 
 .card-body {
-    padding: 16px;
+    padding: 1px;
+    margin: 0 0 0 0px;
 }
 
 .card-body h3 {
-    font-size: 24px;
+    font-size: 20px;
     margin: 0 0 8px;
+
 }
 
 .card-body p {
-    font-size: 16px;
+    font-size: 12px;
     margin: 0;
 }
 
-.card-body p:first-child {
-    margin-bottom: 8px;
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 20%;
-    margin-left: 10%;
-    margin-right: 10%;
-}
